--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@ async function plot_bar_graph() {
 	const w = 400;
 	const h = 400;
 	
-	const scale = d3.scaleLinear().domain([0, dataArray.length]).range([min_val, max_val]);
-	console.log("scale: ", scale);
+	//const scale = d3.scaleLinear().domain([0, dataArray.length]).range([min_val, max_val]);
+	//console.log("scale: ", scale);
 	
 	const svg = d3.select('svg');
 	//.append("svg").attr('width', w).attr('height', h);
