--- a/index.html
+++ b/index.html
@@ -40,32 +40,32 @@ async function plot_line_graph() {
 	
 	// ---------------------------------------------------
 	
-	// Verify the contents of the frequency data
-	const svg = d3.select("#data_display").append("svg");
-	// const svg = d3.select(".chart").append("svg").attr("width", 400).attr("height", 200);
+	// x, y scaling variables
+	// Declare the x (horizontal position) scale.
+	const x = d3.scaleLinear([0, dataArray.length], [marginLeft, width - marginRight]);
+
+	// Declare the y (vertical position) scale.
+	const y = d3.scaleLinear([min_val, max_val], [height - marginBottom, marginTop]);
+  
+	// ---------------------------------------------------
+
+	// Declare the line generator
+	const line = d3.line()
+		.x((d, i) => i)
+		.y(d => d);
 
 	// ---------------------------------------------------
 
-  // x, y scaling variables
-  // Declare the x (horizontal position) scale.
-  const x = d3.scaleLinear([0, dataArray.length], [marginLeft, width - marginRight]);
-
-  // Declare the y (vertical position) scale.
-  const y = d3.scaleLinear([min_val, max_val], [height - marginBottom, marginTop]);
-  
-  // ---------------------------------------------------
-
-  // Declare the line generator
-  const line = d3.line()
-      .x((d, i) => i)
-      .y(d => d);
-
 	// Create the SVG container.
-  const svg = d3.create("svg")
-      .attr("width", width)
-      .attr("height", height)
-      .attr("viewBox", [0, 0, width, height])
-      .attr("style", "max-width: 100%; height: auto; height: intrinsic;");
+	// const svg = d3.select(".chart").append("svg").attr("width", 400).attr("height", 200);
+	
+	const svg = d3.select("#data_display")
+		.append("svg")
+		//.create("svg")
+		.attr("width", width)
+		.attr("height", height)
+		.attr("viewBox", [0, 0, width, height])
+		.attr("style", "max-width: 100%; height: auto; height: intrinsic;");
 
   // Add the x-axis.
   svg.append("g")
