--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@ async function plot_line_graph() {
 
 	// ---------------------------------------------------
 
-	// Create the SVG container.
-	// const svg = d3.select(".chart").append("svg").attr("width", 400).attr("height", 200);
-	
+	// Create the SVG container
 	const svg = d3.select("#data_display")
 		.append("svg")
 		//.create("svg")
@@ -67,31 +65,35 @@ async function plot_line_graph() {
 		.attr("viewBox", [0, 0, width, height])
 		.attr("style", "max-width: 100%; height: auto; height: intrinsic;");
 
-  // Add the x-axis.
-  svg.append("g")
-      .attr("transform", `translate(0,${height - marginBottom})`)
-      .call(d3.axisBottom(x).ticks(width / 80).tickSizeOuter(0));
-
-  // Add the y-axis, remove the domain line, add grid lines and a label.
-  svg.append("g")
-      .attr("transform", `translate(${marginLeft},0)`)
-      .call(d3.axisLeft(y).ticks(height / 40))
-      .call(g => g.select(".domain").remove())
-      .call(g => g.selectAll(".tick line").clone()
-          .attr("x2", width - marginLeft - marginRight)
-          .attr("stroke-opacity", 0.1))
-      .call(g => g.append("text")
-          .attr("x", -marginLeft)
-          .attr("y", 10)
-          .attr("fill", "currentColor")
-          .attr("text-anchor", "start")
-          .text("data"));
-
-  // Append a path for the line.
-  svg.append("path")
-      .attr("fill", "none")
-      .attr("stroke", "steelblue")
-      .attr("stroke-width", 1.5)
+	// ---------------------------------------------------
+	
+	// Add the x-axis
+	svg.append("g")
+		.attr("transform", `translate(0,${height - marginBottom})`)
+		.call(d3.axisBottom(x).ticks(width / 80).tickSizeOuter(0));
+	
+	// Add the y-axis, remove the domain line, add grid lines and a label.
+	svg.append("g")
+		.attr("transform", `translate(${marginLeft},0)`)
+		.call(d3.axisLeft(y).ticks(height / 40))
+		.call(g => g.select(".domain").remove())
+		.call(g => g.selectAll(".tick line")
+			.clone()
+			.attr("x2", width - marginLeft - marginRight)
+			.attr("stroke-opacity", 0.1))
+		.call(g => g.append("text")
+			.attr("x", -marginLeft)
+			.attr("y", 10)
+			.attr("fill", "currentColor")
+			.attr("text-anchor", "start")
+			.text("Title"));
+	
+	// Append a path for the line
+	svg.append("path")
+		.attr("fill", "none")
+		.attr("stroke", "steelblue")
+		.attr("stroke-width", 1.5)
+		.attr("d", line(dataArray));
 
 }
 
