--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@ async function plot_line_graph() {
 	// ---------------------------------------------------
 	
 	// Add the x-axis
-	// svg.append("g")
-	// 	.attr("transform", `translate(0,${height - marginBottom})`)
+	svg.append("g")
+		.attr("transform", `translate(0,${height - marginBottom})`)
 		//.call(d3.axisBottom(x).ticks(width / 80).tickSizeOuter(0));
 	
 	// Add the y-axis, remove the domain line, add grid lines and a label.
-	// svg.append("g")
-	// 	.attr("transform", `translate(${marginLeft},0)`)
+	svg.append("g")
+		.attr("transform", `translate(${marginLeft},0)`)
 	// 	.call(d3.axisLeft(y).ticks(height / 40))
 	// 	.call(g => g.select(".domain").remove())
 	// 	.call(g => g.selectAll(".tick line")
