--- a/index.html
+++ b/index.html
@@ -69,24 +69,26 @@ async function plot_line_graph() {
 	
 	// Add the x-axis
 	svg.append("g")
+		.attr('class', 'x-axis')
 		.attr("transform", `translate(0,${height - marginBottom})`)
-		//.call(d3.axisBottom(x).ticks(width / 80).tickSizeOuter(0));
+		.call(d3.axisBottom(x));
 	
 	// Add the y-axis, remove the domain line, add grid lines and a label.
 	svg.append("g")
+		.attr('class', 'y-axis')
 		.attr("transform", `translate(${marginLeft},0)`)
-	// 	.call(d3.axisLeft(y).ticks(height / 40))
+	 	.call(d3.axisLeft(y))
 	// 	.call(g => g.select(".domain").remove())
 	// 	.call(g => g.selectAll(".tick line")
 	// 		.clone()
 	// 		.attr("x2", width - marginLeft - marginRight)
 	// 		.attr("stroke-opacity", 0.1))
-	// 	.call(g => g.append("text")
-	// 		.attr("x", -marginLeft)
-	// 		.attr("y", 10)
-	// 		.attr("fill", "currentColor")
-	// 		.attr("text-anchor", "start")
-	// 		.text("Title"));
+	 	.call(g => g.append("text")
+			.attr("x", -marginLeft)
+	 		.attr("y", 10)
+	 		.attr("fill", "currentColor")
+	 		.attr("text-anchor", "start")
+	 		.text("Title"));
 	
 	// Append a path for the line
 	svg.append("path")
