--- a/index.html
+++ b/index.html
@@ -72,16 +72,15 @@ async function plot_line_graph() {
 	svg.append("g")
 		.attr('class', 'x-axis')
 		.attr("transform", `translate(0,${height - marginBottom})`)
-		.call(d3.axisBottom(x_scale));
+		.call(d3.axisBottom(x_scale).ticks(width / 80).tickSizeOuter(0));
 	
 	// Add the y-axis, remove the domain line, add grid lines and a label.
 	svg.append("g")
 		.attr('class', 'y-axis')
 		.attr("transform", `translate(${marginLeft},0)`)
-	 	.call(d3.axisLeft(y_scale))
+	 	.call(d3.axisLeft(y_scale).ticks(height / 40))
 		.call(g => g.select(".domain").remove())
-		.call(g => g.selectAll(".tick line")
-			.clone()
+		.call(g => g.selectAll(".tick line").clone()
 			.attr("x2", width - marginLeft - marginRight)
 			.attr("stroke-opacity", 0.1))
 	 	.call(g => g.append("text")
@@ -96,7 +95,7 @@ async function plot_line_graph() {
 		// .datum(dataArray)
 		.attr("fill", "none")
 		.attr("stroke", "steelblue")
-		.attr("stroke-width", 1.5)
+		.attr("stroke-width", 3)
 		.attr("d", line(dataArray));
 
 }
