--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <body>
 
 <button id="plot_line_graph" onclick="plot_line_graph()" style="display:block;">plot_line_graph</button>
+<button id="plot_line_graph2" onclick="plot_line_graph2()" style="display:block;">plot_line_graph2</button>
 <button id="plot_bar_graph" onclick="plot_bar_graph()" style="display:block;">plot_bar_graph</button>
 
 <div id="data_display" style="display:block; text-align: left; width: 600px;"></div>
@@ -100,6 +101,41 @@ async function plot_line_graph() {
 
 }
 
+
+async function plot_line_graph2() {
+
+	const data = [
+            { x: 0, y: 10 },
+            { x: 1, y: 20 },
+            { x: 2, y: 15 },
+            { x: 3, y: 25 },
+            { x: 4, y: 18 }
+        ];
+
+        const svg = d3.select("#data_display");
+        const width = +svg.attr("width");
+        const height = +svg.attr("height");
+
+        const xScale = d3.scaleLinear()
+            .domain([0, d3.max(data, d => d.x)])
+            .range([0, width]);
+
+        const yScale = d3.scaleLinear()
+            .domain([0, d3.max(data, d => d.y)])
+            .range([height, 0]);
+
+        const line = d3.line()
+            .x(d => xScale(d.x))
+            .y(d => yScale(d.y));
+
+        svg.append("path")
+            .datum(data)
+            .attr("fill", "none")
+            .attr("stroke", "steelblue")
+            .attr("stroke-width", 2)
+            .attr("d", line);
+	
+}
 
 
 async function min_max_of_array(arr) {
