--- a/index2.html
+++ b/index2.html
@@ -20,10 +20,11 @@
  
 <script>
 
-var url = "https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3";
 
 
-async function play_sound_from_a_url(url) {
+async function play_sound_from_a_url() {
+	
+	var url = "https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3";
   
  // Create an AudioElement
  const audioElement = document.createElement('audio');
@@ -60,7 +61,9 @@ async function play_sound_from_a_url(url) {
 }
 
 
-async function view_timeseries_from_audio(url) {
+async function view_timeseries_from_audio() {
+	
+	var url = "https://interactive-examples.mdn.mozilla.net/media/cc0-audio/t-rex-roar.mp3";
 
  // Create an AudioElement
  const audioElement = document.createElement('audio');
